Serial data & reset data added

--- a/app/view/user/sidebar.twig
+++ b/app/view/user/sidebar.twig
@@ -45,12 +45,12 @@
                                 <p>Device On/Off Buttons</p>
                             </a>
                         </li>
-                        <!-- <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ path_for('device.serialData') }}">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Serial Data to Device</p>
                             </a>
-                        </li> -->
+                        </li>
                     </ul>
                 </li>
                 <!-- <li class="nav-item">
@@ -59,12 +59,12 @@
                         <p>Location Details</p>
                     </a>
                 </li> -->
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="nav-icon fas fa-trash"></i>
-                        <p>Reset All</p>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path_for('reset') }}">
+                        <i class="nav-icon fas fa-undo"></i>
+                        <p>Reset Sensor Data</p>
                     </a>
-                </li> -->
+                </li>
                 <!-- <li class="nav-item has-treeview menu-open">
                     <a class="nav-link" href="#">
                         <i class="nav-icon fas fa-cog"></i>
