SMS Feature added

--- a/app/view/user/sidebar.twig
+++ b/app/view/user/sidebar.twig
@@ -23,6 +23,12 @@
                         <p>View IOT Data</p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path_for('mobile') }}">
+                        <i class="nav-icon fas fa-edit"></i>
+                        <p>Mobile Number Update</p>
+                    </a>
+                </li>
                 <li class="nav-item has-treeview menu-open">
                     <a class="nav-link" href="#">
                         <i class="nav-icon fas fa-tablet-alt"></i>
