User sensor type added

--- a/app/view/user/sidebar.twig
+++ b/app/view/user/sidebar.twig
@@ -78,10 +78,17 @@
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Sensors</p>
                             </a>
-                        </li><li class="nav-item">
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ path_for('setting.device') }}">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Devices</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path_for('setting.sensorType') }}">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Sensor Selection</p>
                             </a>
                         </li>
                     </ul>
