--- a/app/view/maintenance.twig
+++ b/app/view/maintenance.twig
@@ -1,18 +1,57 @@
 <!DOCTYPE html>
-<title>Site Maintenance</title>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>{{ appName }} - Site Maintenance</title>
+</head>
 <style>
-  body { text-align: center; padding: 150px; }
-  h1 { font-size: 50px; }
-  body { font: 20px Helvetica, sans-serif; color: #333; }
-  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
-  a { color: #dc8100; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
+    body {
+        text-align: center;
+        padding: 150px;
+    }
+
+    h1 {
+        font-size: 50px;
+    }
+
+    body {
+        font: 20px Helvetica, sans-serif;
+        color: #333;
+    }
+
+    article {
+        display: block;
+        text-align: left;
+        width: 650px;
+        margin: 0 auto;
+    }
+
+    a {
+        color: #dc8100;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #333;
+        text-decoration: none;
+    }
 </style>
 
-<article>
-    <h1>We&rsquo;ll be back soon!</h1>
-    <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto: {{ supportMail }}">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
-        <p>&mdash; {{ appName }} Team</p>
-    </div>
-</article>
+<body>
+    <article>
+        <h1>We&rsquo;ll be back soon!</h1>
+        <div>
+            <p>
+                Sorry for the inconvenience but we&rsquo;re performing some
+                maintenance at the moment. If you need to you can always
+                <a href="mailto: {{ supportMail }}">contact us</a>, otherwise
+                we&rsquo;ll be back online shortly!
+            </p>
+            <p>&mdash; {{ appName }} Team</p>
+        </div>
+    </article>
+</body>
+
+</html>
