--- a/app/view/navigation.twig
+++ b/app/view/navigation.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark-cyan">
     <div class="container">
         <a class="navbar-brand" href="{{ path_for('home') }}">{{ appName }}</a>
-        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -18,7 +18,7 @@
                         <i class="fas fa-user"></i> {{ auth.userName }}
                     </a>
                     <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                        <a class="dropdown-item" href="{{ path_for('user.changePwd') }}">Change Password</a>
+                        <a class="dropdown-item" href="{{ path_for('user.changePassword') }}">Change Password</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{{ path_for('logout') }}">Log out</a>
                     </div>
@@ -27,6 +27,6 @@
                 {% endif %}
 
             </ul>
-        </div> -->
+        </div>
     </div>
 </nav>
