--- a/app/view/user/navigation.twig
+++ b/app/view/user/navigation.twig
@@ -1,4 +1,4 @@
-<nav class="main-header navbar navbar-expand navbar-dark bg-dark-cyan">
+<nav class="main-header navbar navbar-expand navbar-light bg-dark-cyan">
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" data-widget="pushmenu" href="#">
@@ -7,14 +7,15 @@
         </li>
     </ul>
     <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <span class="nav-link">{{ auth.userName }}</span>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{{ path_for('logout') }}">
-                <i class="fa fa-sign-out-alt"></i>
-                Logout
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user"></i> {{ auth.userName }}
             </a>
+            <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
+                <a class="dropdown-item" href="{{ path_for('user.changePassword') }}">Change Password</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{{ path_for('logout') }}">Log out</a>
+            </div>
         </li>
     </ul>
 </nav>
