--- a/app/view/user/view_device_data_form.twig
+++ b/app/view/user/view_device_data_form.twig
@@ -17,7 +17,7 @@
                 <div class="form-group row">
                     <div class="col-sm-2"></div>
                     <div class="col-sm-10">
-                        <button id="submitBtn" class="btn btn-primary" type="button">Send Data</button>
+                        <button id="submitBtn" class="btn btn-cyan" type="button">Send Data</button>
                     </div>
                 </div>
             </div>
