--- a/app/view/user/view_device_setting.twig
+++ b/app/view/user/view_device_setting.twig
@@ -36,7 +36,7 @@
                     <div class="form-group row">
                         <div class="col-sm-3"></div>
                         <div class="col-sm-3">
-                            <button class="btn btn-primary" type="submit" id="submitBtn">Update</button>
+                            <button class="btn btn-cyan" type="submit" id="submitBtn">Update</button>
                         </div>
                     </div>
                 </div>
