--- a/app/view/user/view_mobile_number.twig
+++ b/app/view/user/view_mobile_number.twig
@@ -19,7 +19,7 @@
                     <div class="form-group row">
                         <div class="col-sm-2"></div>
                         <div class="col-sm-3">
-                            <button class="btn btn-primary" type="submit" id="submitBtn">Update</button>
+                            <button class="btn btn-cyan" type="submit" id="submitBtn">Update</button>
                         </div>
                     </div>
                 </div>
