--- a/app/view/user/view_sensor_setting.twig
+++ b/app/view/user/view_sensor_setting.twig
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-12">
         <div class="card card-info">
-        <form action="{{ path_for('setting.sensor') }}" method="post" autocomplete="off" role="form" class="form-horizontal">
+            <form action="{{ path_for('setting.sensor') }}" method="post" autocomplete="off" role="form" class="form-horizontal">
                 <div class="card-body">
                     <div class="form-group row">
                         <label class="col-sm-3 col-form-label" for="sensorCount">
@@ -36,7 +36,7 @@
                     <div class="form-group row">
                         <div class="col-sm-3"></div>
                         <div class="col-sm-3">
-                            <button class="btn btn-primary" type="submit" id="submitBtn">Update</button>
+                            <button class="btn btn-cyan" type="submit" id="submitBtn">Update</button>
                         </div>
                     </div>
                 </div>
