--- a/app/view/user/view_sensors.twig
+++ b/app/view/user/view_sensors.twig
@@ -18,7 +18,7 @@
                         <input class="form-control datePicker" id="date" placeholder="Select Date" name="date" type="text">
                     </div>
                     <div>
-                        <button class="btn btn-primary" type="button" id="filterBtn">Find</button>
+                        <button class="btn btn-cyan" type="button" id="filterBtn">Find</button>
                     </div>
                 </div>
             </div>
