CSS files minified

--- a/app/view/404.twig
+++ b/app/view/404.twig
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <base href="{{base_url()}}/" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{ appName }}</title>
     <meta name="theme-color" content="#fff">
-    <!-- <link rel="shortcut icon" href="assets/images/favicon.ico" /> -->
-    <link rel="stylesheet" href="assets/css/packages.min.2.0.0.css">
+    <link rel="stylesheet" href="assets/css/packages.min.css">
 
     <style>
-        body { background: #dedede;}
-        .page-wrap { min-height: 100vh;}
+        body {
+            background: #dedede;
+        }
+
+        .page-wrap {
+            min-height: 100vh;
+        }
     </style>
 </head>
 
