--- a/app/view/user/view_sensors.twig
+++ b/app/view/user/view_sensors.twig
@@ -1,6 +1,7 @@
 {% extends 'user/layout.twig' %}
 
 {% block stylecontent %}
+<link rel="stylesheet" href="assets/css/datatable.packages.min.css">
 <link rel="stylesheet" href="assets/css/flatpickr.min.css">
 {% endblock %}
 
