--- a/app/view/login.twig
+++ b/app/view/login.twig
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#fff">
     <title>{{ appName }} - Login</title>
-    <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="assets/css/login.min.css">
 </head>
 
 <body>
