--- a/app/view/user/view_device_switch.twig
+++ b/app/view/user/view_device_switch.twig
@@ -1,7 +1,7 @@
 {% extends 'user/layout.twig' %}
 
 {% block stylecontent %}
-<link href="assets/css/bootstrap-toggle.css" rel="stylesheet">
+<link href="assets/css/bootstrap-toggle.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
