--- a/app/view/user/view_reset_form.twig
+++ b/app/view/user/view_reset_form.twig
@@ -45,7 +45,7 @@ $(document).ready(function() {
     })
 
     function redirectToHome() {
-        window.location.href = "{{ path_for('home') }}";
+        window.location.href = "{{ path_for('user.dashboard') }}";
     }
 
 });
