--- a/app/view/login.twig
+++ b/app/view/login.twig
@@ -1,57 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'layout.twig' %}
 
-<head>
-    <base href="{{base_url()}}/" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#fff">
-    <title>{{ appName }} - Login</title>
-    <link rel="stylesheet" href="assets/css/login.min.css">
-</head>
+{% block stylecontent %}
+<link rel="stylesheet" href="assets/css/login.css">
+{% endblock %}
 
-<body>
-    <nav class="navbar bg-dark-cyan">
-        <a class="navbar-brand" href="{{ path_for('home') }}">{{ appName }}</a>
-    </nav>
+{% block content %}
+<section class="ud-login">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="ud-login-wrapper">
 
-    <aside class="form-signin col-sm-4">
-        <div class="card">
-            <article class="card-body">
-                <h4 class="card-title mb-4 mt-1">Sign in</h4>
+                    {% include 'flash.twig' %}
 
-                {% include 'flash.twig' %}
-
-                <form action="{{ path_for('login') }}" method="POST" role="form" autocomplete="off">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input class="form-control {{errors.username ? 'is-invalid' : ''}}" id="username"
-                            name="username" placeholder="Username" type="username" value="{{ old.username }}">
-                        {% if errors.username %}
-                        <div class="invalid-feedback">
-                            {{ errors.username | first }}
+                    <form action="{{ path_for('login') }}" method="POST" autocomplete="off" class="ud-login-form">
+                        <div class="ud-form-group">
+                            <input class="{{errors.username ? 'is-invalid' : ''}}" id="username" name="username"
+                                placeholder="Username" type="username" value="{{ old.username }}">
+                            {% if errors.username %}
+                            <div class="invalid-feedback">
+                                {{ errors.username | first }}
+                            </div>
+                            {% endif %}
                         </div>
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input class="form-control {{errors.password ? 'is-invalid' : ''}}" id="password"
-                            name="password" placeholder="Password" type="password">
-                        {% if errors.password %}
-                        <div class="invalid-feedback">
-                            {{ errors.password | first }}
+                        <div class="ud-form-group">
+                            <input class="{{errors.password ? 'is-invalid' : ''}}" id="password" name="password"
+                                placeholder="Password" type="password">
+                            {% if errors.password %}
+                            <div class="invalid-feedback">
+                                {{ errors.password | first }}
+                            </div>
+                            {% endif %}
                         </div>
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-cyan btn-block" type="submit">
-                            Login
-                        </button>
-                    </div>
-                </form>
-            </article>
+                        <div class="ud-form-group">
+                            <button type="submit" class="ud-main-btn w-100">Login</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-    </aside>
-</body>
-
-</html>
+    </div>
+</section>
+{% endblock %}
