--- a/app/view/user/sidebar.twig
+++ b/app/view/user/sidebar.twig
@@ -1,5 +1,6 @@
 <aside class="main-sidebar sidebar-light-info elevation-4">
     <a class="brand-link" href="{{ path_for('home') }}">
+        <img src="assets/images/logo.png" alt="Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">{{ appName }}</span>
     </a>
 
